2008-11-14  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix.

        * platform/wx/LocalizedStringsWx.cpp:
        (WebCore::contextMenuItemTagTextDirectionMenu):

2008-11-14  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - <rdar://problem/6234307> Support action methods for setting and clearing character-level directionality
        - WebCore part of <rdar://problem/6234337> Add a Text Direction menu to the default context menu when appropriate

        * WebCore.base.exp: Exported
        WebCore::Settings::setTextDirectionSubmenuInclusionBehavior().

        * editing/ApplyStyleCommand.cpp:
        (StyleChange::init): Changed to always include the direction property
        in the result if the unicode-bidi property is included.
        (ApplyStyleCommand::splitAncestorsWithUnicodeBidi): Added. Finds the
        highest ancestor of the given node that establishes bidi embedding. If
        that embedding agrees with the given allowed direction, finds the
        second-highest embedding ancestor. Splits all nodes through that
        ancestor. If the highest embedding ancestor did not need to be split,
        it is returned.
        (ApplyStyleCommand::removeEmbeddingUpToEnclosingBlock): Added. Removes
        bidi embedding attributes and styles from all ancestors of the given
        node up to its enclosing block or the given node.
        (ApplyStyleCommand::applyInlineStyle): Added code to handle the
        unicode-bidi property. Applying style the includes this property
        involves removing all bidi embedding in effect, except  for one-level
        embedding that agrees with the desired embedding, then applying the
        desired embedding where it is not already in effect.
        (ApplyStyleCommand::applyInlineStyleToRange): Factored out from
        applyInlineStyle().
        (ApplyStyleCommand::removeHTMLBidiEmbeddingStyle): Added. Removed the